--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -86,6 +86,8 @@
     order: 1;
     flex-grow: 0;
     display: flex;
+    flex-direction: column;
+    gap:6%;
 }
 
 .bank_decentral_img{
@@ -100,24 +102,14 @@
 .text_field_dece{
     width: 100%;
     height: 29px;
-
     text-align: center;
     font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
     font-size: 19px;
     line-height: 29px;
-    /* identical to box height */
-
     letter-spacing: 0.016em;
-
-    /* Stroke 2nd */
-
     color: #1A1E29;
-
-
-    /* Inside auto layout */
-
     flex: none;
     order: 1;
     flex-grow: 0;
