--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -38,7 +38,7 @@
     font-family: 'Abel';
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 23px;
     letter-spacing: 0.016em;
     text-align: center;
     color: #013427;
@@ -102,4 +102,49 @@
     flex: none;
     order: 2;
     flex-grow: 0;
+}
+
+@media screen and (max-width: 400px) {
+    .balances_main_comp{
+        width: 100%;
+        height: 180px;
+    }
+    .name_balance{
+        font-size: 28px;
+    }
+}
+
+@media only screen and (min-width:400px)  and (max-width: 600px) {
+    .balances_main_comp{
+        width: 100%;
+        height: 180px;
+    }
+    .name_balance{
+        font-size: 28px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    .balances_main_comp{
+        height: 100%;
+    }
+    .name_balance{
+        font-size: 22px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px){
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px)  {
+
 }
