--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -117,3 +117,132 @@
     order: 1;
     flex-grow: 0;
 }
+
+@media screen and (max-width: 400px) {
+    .body{
+        flex-direction: column;
+        gap: 2%;
+        margin-top: -5%;
+    }
+    .balances_component{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        gap: 2%;   
+    }
+
+    .transfer_component{
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        align-content: center;
+        text-align: center;
+        gap: 4%;
+    }
+
+    .decentral_logo_compo{
+        width: auto;
+    }
+
+    .decentral_bank_images{
+        width: 100%;
+        height: 38%;
+    }
+
+    .transfer_fields{
+        align-self: center;
+        width: 90%;
+        height: 58%;
+        border-left: none;
+        border-top: 1px solid rgba(26, 30, 41, 0.12);
+    }
+
+}
+
+@media only screen and (min-width:400px)  and (max-width: 600px) {
+    .body{
+        flex-direction: column;
+        gap: 2%;
+        margin-top: -5%;
+    }
+    .balances_component{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        gap: 2%;
+        
+    }
+
+    .transfer_component{
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        align-content: center;
+        text-align: center;
+        gap: 4%;
+    }
+
+    .decentral_logo_compo{
+        width: auto;
+    }
+
+    .decentral_bank_images{
+        width: 100%;
+        height: 38%;
+    }
+
+    .transfer_fields{
+        align-self: center;
+        width: 90%;
+        height: 58%;
+        border-left: none;
+        border-top: 1px solid rgba(26, 30, 41, 0.12);
+    }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    .body{
+        flex-direction: column;
+    }
+    .balances_component{
+        width: 100%;
+        height: 30%;
+        flex-direction: row;
+        gap: 2%;
+    }
+
+    .transfer_component{
+        width: 100%;
+        height: 70%;
+    }
+
+    .decentral_logo_compo{
+        width: auto;
+    }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px){
+    .balances_component{
+        width: 30%;
+    }
+    .transfer_component{
+        width: 68%;
+    }
+    .decentral_bank_image{
+        height: 65%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px)  {
+
+}
